fix: layout shifting in FAQ section

--- a/src/styles/sections/faq.scss
+++ b/src/styles/sections/faq.scss
@@ -22,6 +22,7 @@
 
     &__accordion {
         margin-bottom: 3rem;
+        height: 30rem;
     }
 
     &__item {
